--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <h1>メモから文章生成します</h1>
-
+<p><a href="https://koto-ictclub.net">制作:光都ICTクラブ</a></p>
       <!-- エラーメッセージ表示 -->
       {% for message in get_flashed_messages() %}
       <div class="error-message">{{ message }}</div>
